--- a/css/text-with-image.css
+++ b/css/text-with-image.css
@@ -1,41 +1,22 @@
 /* General Styles */
 
-.hero-subscription-form {
+.text-with-image {
     background: #f1f1f1;
-    padding: 50px 10px 50px 10px;
+    padding: 10px 10px 10px 10px;
 }
-
-.hero-subscription-form .left-top {
-    padding-bottom: 20px;
-
-}
-
-.hero-subscription-form .right-bottom {
-
-}
-
 
 /* Typograghy */
-.hero-subscription-form .hero-headline {
-    font-size: 2.5em;
-    font-weight: 700;
+.text-with-image p {
+    font-size: 1.5em;
+    font-family: inherit;
 }
 
-.hero-subscription-form .hero-text {
-    font-size: 1.3em;
+/* Media Queries */
+
+/* Small devices (tablets, up to 768px) */
+@media (max-width: 768px) {
+    
+    .text-with-image p {
+        font-size: 1em;
+    }
 }
-
-
-/* Form */
-
-.hero-subscription-form .right-bottom .form-container {
-    background: #fff;
-    padding: 10px 20px 10px 20px;
-    border-radius: 10px;
-}
-
-.hero-subscription-form .right-bottom .form-container .form-title {
-    font-size: 2.0em;
-}
-
-
