Adding new template called Open Source Porject page v0.1.

--- a/templates/open-source-project-page/css/main.css
+++ b/templates/open-source-project-page/css/main.css
@@ -1,19 +1,34 @@
 /*
 
-    App Feature Page template styles.
+    Open Source Project Page template styles.
     
 */
 
 
 /****** Override Bootparts styles ******/
-
-.call-to-action-bar {
-    padding-top: 20px;
-    padding-bottom: 20px; 
+.center-aligned-headline, .center-aligned-headline .headline {
+    padding-top: 30px;
+    padding-bottom: 0px;
+    background: #fff;
 }
 
-.image-with-text {
+.three-column-content {
     background: #fff;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
+}
+
+.call-to-action-button {
+    padding-top: 0px;
+    padding-bottom: 30px;
+    background: #fff;
+}
+
+
+/****** Template custom styles ******/
+
+.headline-content {
+    color: #000;
+    font-weight: 400;
+    font-size: 0.7em;
 }
