--- a/templates/open-source-project-page/open-source-project-page.html
+++ b/templates/open-source-project-page/open-source-project-page.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Yelluw">
     <link rel="icon" href="">
 
-    <title>Bootparts - App Feature Page</title>
+    <title>Bootparts - Open Source Project Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -35,68 +35,169 @@
   </head>
   <body>
 
-    <div class="call-to-action-bar">
+    <div class="hero-brand-two-buttons">
         <div class="container">
-          <div class="row">
-
-            <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-9 col-sm-offset-2 col-xs-7 col-xs-offset-3">
             
-              <form class="form-inline">
-                <div class="form-group">
-                  <label class="sr-only">Don't miss a thing! </label>
-                  <p class="form-control-static">Subscribe to our newsletter &nbsp;</p>
+            <!-- logo -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="logo">
+                        Text Logo
+                    </div>
                 </div>
-                <div class="form-group">
-                  <label for="cta-email-address" class="sr-only">Email Address</label>
-                    <input type="email" class="form-control" id="cta-email-address" placeholder="e-mail address">
-                </div>
-                <button type="submit" class="btn btn-primary">Send</button>
-              </form>
-
+            <!-- end logo -->
             </div>
 
-          <!-- end row -->
-          </div>
+            <!-- headline -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="headline">
+                        <p>This is a headline. Please provide a clear explanation about the product.</p>
+                    </div>
+                </div>
+            <!-- end headline -->
+            </div>
 
-      <!-- end container-->
-      </div>
+            <!-- two-buttons -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="two-buttons">
+                        <a href="#" class="btn btn-default">Button #1</a>
+                        <a href="#" class="btn btn-default">Button #2</a>
+                    </div>
+                </div>
+            <!-- end two-buttons -->
+            </div>
 
-    <!-- end call-to-action-bar -->
+            <!-- caption -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="caption">
+                        <p>A caption for the buttons.</p>
+                    </div>
+                </div>
+            </div>
+          
+    <!-- end container -->
+    </div>
+
+    <!-- end hero-brand-two-buttons -->
+    </div>
+
+    <div class="center-aligned-headline top">
+        <div class="container">
+                <div class="row">
+
+                    <div class="headline">
+                        
+                        <p class="headline-content">
+                          This project just works. Its made for people like you and me.
+                        </p>
+                        <p class="headline-content">  
+                          Look at the amazing features it has:
+                        </p> 
+                    
+                    <!-- end headline -->
+                    </div>
+                
+                <!-- end row -->
+                </div>         
+        <!-- end container -->
+        </div>
+    <!-- end center-aligned-headline -->
     </div>
 
 
-    <div class="image-with-text">
+    <div class="three-column-content">
+        
         <div class="container">
 
           <div class="row">
 
-            <!-- left side image -->
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-              <a href="#"><img class="img-responsive" src="http://www.placehold.it/450x450"></a>
-            
-            <!-- end of left side image -->
+            <!-- left column -->
+            <div class="col-lg-4 col-md-4 col-sm-4 left-column">
+              
+              <img src="https://placehold.it/50x50" class="column-img">
+
+              <p class="column-title">Amazing Feature #1</p>
+
+              <p class="column-content">Content</p>
+
+            <!-- end left column -->
             </div>
 
-            <!-- right side text -->
-            <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-6">
-              <p>
-                Describe your app benefits here.
-              </p>
+            <!-- middle column -->
+            <div class="col-lg-4 col-md-4 col-sm-4 middle-column">
 
-              <p>
-                Put an image of the app to the left of this text. The image also doubles as a link.
-              </p>
+              <img src="https://placehold.it/50x50" class="column-img">
 
-            <!-- end of right side text -->
-            </div>
-          
+              <p class="column-title">Amazing Feature #2</p>
+
+              <p class="column-content">Content</p>
+              
+            <!-- end middle column -->
+            </div>  
+
+            <!-- right column -->
+            <div class="col-lg-4 col-md-4 col-sm-4 right-column">
+              
+              <img src="https://placehold.it/50x50" class="column-img">
+
+              <p class="column-title">Amazing Feature #3</p>
+
+              <p class="column-content">Content</p>
+
+            <!-- end right column -->
+            </div>          
+           
           <!-- end row -->
           </div>
 
       <!-- end container-->
       </div>
 
-    <!-- end image-with-text -->
+    <!-- end three-column-content -->
+    </div>
+
+
+    <div class="center-aligned-headline">
+        <div class="container">
+                <div class="row">
+
+                    <div class="headline">
+                        
+                        <p class="headline-content">This project is Open Source. Its hosted on Github.</p> 
+                    
+                    <!-- end headline -->
+                    </div>
+                
+                <!-- end row -->
+                </div>         
+        <!-- end container -->
+        </div>
+    <!-- end center-aligned-headline -->
+    </div>
+
+
+    <div class="call-to-action-button">
+        <div class="container">
+          <div class="row">
+
+            <!-- center the button -->
+            <div class="text-center">
+
+              <p><a class="btn btn-primary">Visit the Github Page</a></p>
+            
+            <!-- end text-center -->
+            </div>
+
+          <!-- end row -->
+          </div>
+
+      <!-- end container-->
+      </div>
+
+    <!-- end call-to-action-button -->
     </div>
 
 
@@ -110,10 +211,8 @@
             <div class="col-lg-6 col-md-6 col-sm-6 left-column">
               <ul class="list-unstyled">
                 <li class="list-title">Navigation</li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">App Store</a></li>
-                <li><a href="">Play Store</a></li>
-                <li><a href="">Windows Store</a></li>
+                <li><a href="#">Documentation</a></li>
+                <li><a href="https://github.com">Github</a></li>
                 <li><a href="https://github.com/yelluw/Bootparts">Bootparts</a></li>
                 <li><a href="http://yelluw.com">Yelluw</a></li>
                 <li>&copy; 2017</li>
@@ -127,7 +226,6 @@
                 <li class="list-title">Social</li>
                 <li><a href="">FriendFace</a></li>
                 <li><a href="">Chatter</a></li>
-                <li><a href="">MySpace</a></li>
               </ul>
             <!-- end right column -->
             </div>  
@@ -140,8 +238,6 @@
 
     <!-- end two-column-footer -->
     </div>
- 
-
  
     <!-- Bootstrap core JavaScript
     ================================================== -->
