--- a/templates/open-source-project-page/css/bootparts.css
+++ b/templates/open-source-project-page/css/bootparts.css
@@ -1,5 +1,5 @@
 /* 
-Bootparts version 0.1
+Bootparts version 0.4
 
 This CSS file includes all the styles
 used by the components to simplify things.
@@ -696,5 +696,44 @@ SOFTWARE.
 
     .hero-brand-two-buttons .caption p {
         font-size: .8em;
+    }
+}
+
+/****** Two column content ******/
+
+/* General Styles */
+.two-column-content {
+    background: #f1f1f1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/*
+    Typography
+*/
+
+.two-column-content .left-column p {
+    font-size: 0.9em;
+}
+
+.two-column-content .right-column p {
+    font-size: 1.3em;
+}
+
+/* 
+
+    Media Queries 
+
+*/
+
+/* Small devices (tablets, up to 768px) */
+@media (max-width: 768px) {
+
+    .two-column-content .left-column p {
+        font-size: 0.7em;
+    }
+
+    .two-column-content .right-column p {
+        font-size: 1.1em;
     }
 }
