Adjusted font size for smaller screens to improve readability

--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,26 @@
     padding-bottom: 20px;
 }
 
-.component-img {
+/* Media Queries */
+
+/* Small devices (tablets, up to 768px) */
+@media (max-width: 768px) {
+    
+    .two-column-content .left-column {
+        font-size: 0.6em;
+    }
+
+    .two-column-content .right-column h1 {
+        font-size: 1.0em;
+    }
+
+    .two-column-content .right-column h3 {
+        font-size: 0.9em;
+    }
+
+    .two-column-content .right-column p {
+        font-size: 0.8em;
+
+    }
 
 }
