Added two-row-squares bootpart to bootparts.css and bootparts-minified.css

--- a/css/bootparts.css
+++ b/css/bootparts.css
@@ -737,3 +737,26 @@ SOFTWARE.
         font-size: 1.1em;
     }
 }
+
+/****** Two Row Squares ******/
+
+/* General Styles */ 
+
+.two-row-squares {
+    background: #f1f1f1;
+}
+
+/* 
+
+    Rows
+
+*/
+
+.top-row {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.bottom-row {
+    padding-bottom: 30px;
+}
